# agent-identity-registry

./: .gitignore  .replit  Dockerfile  PACKAGE-READY.md  Procfile  README.md  STATUS.md  demo.py  fly.toml  pyproject.toml  render.yaml  vercel.json
docs/: DEPLOYMENT.md  NIST-SUBMISSION.md  VIDEO-SCRIPT.md  demo-output-clean.txt  demo-output.txt  linkedin-post.md  nist-submission-final.md  nist-submission.html
src/agent_registry/: __init__.py  database.py  main.py  models.py
tests/: __init__.py  test_api.py
